# FineTuning_Coding

./: .env  README.md  main.py  pyproject.toml  unified_pipeline.py
.claude/: settings.local.json
Data_Preprocessing/: Data_preparing.ipynb
Data_Preprocessing/data/: python_langchain_llms_data.md
Data_Preprocessing/data/chunks/: langgraph_chunks.json  pydantic_ai_chunks.json  python_langchain_chunks.json
Data_prepration/: pipeline_orchestrator.py
Data_prepration/data_processing/: README.md  __init__.py  main.py
Data_prepration/data_processing/components/: __init__.py  data_fetcher.py  pipeline_tasks.py  semantic_chunker.py
Data_prepration/data_processing/models/: __init__.py  config.py
Data_prepration/training_data_generation/: __init__.py  main.py
data/: langgraph_llms_data.md  pydantic_ai_llms_data.md  pydantic_llms_data.md  python_langchain_llms_data.md  training_dataset.json
data/chunks/: langgraph_llms_data_chunks.json  pydantic_ai_llms_data_chunks.json  pydantic_llms_data_chunks.json  python_langchain_llms_data_chunks.json
data/training/: langgraph_llms_data_training_examples.json  pydantic_ai_llms_data_training_examples.json  pydantic_llms_data_training_examples.json  python_langchain_llms_data_training_examples.json
model_training/: README.md  __init__.py  pipeline_orchestrator.py
model_training/comparison_service/: __init__.py  main.py
model_training/config/: __init__.py  base_config.py  comparison_config.py  evaluation_config.py  training_config.py
model_training/monitoring_service/: __init__.py  main.py
model_training/testing_service/: __init__.py  main.py
model_training/training_pipeline/: __init__.py  main.py
puml/: README.md  comparison_service_pipeline.puml  complete_pipeline_overview.puml  data_processing_pipeline.puml  model_testing_pipeline.puml  model_training_pipeline.puml  training_data_generation.puml
(+21 files in other folders)
