[project]
name = "coding-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "httpx>=0.28.1",
    "ipynb>=0.5.1",
    "langchain>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-experimental>=0.3.4",
    "prefect>=3.4.14",
    "pydantic-ai>=0.7.4",
    "requests>=2.32.5",
    "sentence-transformers>=2.2.0,<6.0.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.21.0,<5.0.0",
]
