[project]
name = "coding-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.0",
    "bitsandbytes>=0.47.0",
    "chromadb>=1.0.20",
    "datasets>=3.6.0",
    "einops>=0.8.1",
    "faiss-cpu>=1.12.0",
    "httpx>=0.28.1",
    "ipynb>=0.5.1",
    "langchain>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-experimental>=0.3.4",
    "matplotlib>=3.10.5",
    "pandas>=2.3.2",
    "peft>=0.17.1",
    "prefect>=3.4.14",
    "pydantic-ai>=0.7.4",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=2.2.0,<6.0.0",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.21.0,<5.0.0",
    "unsloth>=2025.8.9",
    "wandb>=0.21.1",
]
